# study

./: .gitignore  README.md  show.md
.autogit/: autogit.json
Algorithm/: Materials.md  README.md  数据结构与算法思维导图.md  递归.md  面试算法和数据结构知识.md
Algorithm/Raft/: Materials.md  README.md
Algorithm/Search/: README.md
Algorithm/Sort/: README.md
Algorithm/数据分析/: Learning Materials.md
Algorithm/数据结构与算法分析 —C语言描述/: README.md
Architecture/0. 体系结构/: README.md  为什么计算机采用补码而不是原码或反码？.md  服务器体系结构分析方法论.md
Architecture/00. 体系结构/: 为什么计算机采用补码而不是原码或反码？.md  服务器体系结构分析方法论.md
Architecture/01. Mainboard/: 主板.md  主板上各种接口和附属部件科普.md  服务器组成结构.md  芯片组.md
Architecture/02. ACPI/: 0. materials.md  1. introduction.md  APCI Table和Device Tree.md
Architecture/03. Firmware/: 为啥要分析固件的加载地址.md
Architecture/04. CPU/: CPU的选购和认知.md  README.md
Architecture/05. Memory/: README.md  单根内存条的极限容量和内存条上的2R X 8标识的意思.md  服务器最大内存以及制约因素.md  详解双通道内存和磁盘阵列.md
Architecture/06. PCI/: Materials.md  PCI对比PCIe.md
Architecture/07. Disk/: 00. 基本概念.md  显存占用地址空间问题.md
Architecture/08. GPU/: GPU选购和认知.md  README.md
Architecture/09. USB/: REAME.md
Architecture/11. Tools/: rw.md
GCC/: 0. materials.md  Introduction.md  README.md  cc、gcc、g++、CC的区别概括.md  安装其他版本并使用.md  指定g++ 头文件路径的方法.md  编译和链接那点事.md
GDB/: Materials.md  REAME.md  使用gdb调试运行中的程序.md  利用GDB进行远程调试.md  如何用 gdb 调试多任务程序.md
GDB/用GDB调试程序/: 0. material.md  1.md  2.md  3.md  4.md  (+1 more)
Linux/: Linux kernel map.md  README.md
Tools/: Blog.md  README.md  如何学习和阅读代码.md  实用软件.md  网上学习网站导航.md  论文阅读下载.md
Vim/: 0. Tips.md  00. Tips.md  06. 多文件编辑.md  08. 注释.md  1. 入门基础.md  2. 图解教程.md  3. tab和缩进.md  4. 寄存器.md  5. 代码折叠.md  7. 查找替换及正则表达式.md  9. gvim.md  Materials.md  myVim.md
Virtualization/: Materials.md  todo.md  x86虚拟化概观.md
Virtualization/07. Device虚拟化/4. 仿真设备/ivshmem/ivshmem-code/tests/FTP/VM/: CMakeLists.txt  ftp.h  ftp_recv.c  ftp_send.c  ivshmem.c
Virtualization/7. Device虚拟化/4. 仿真设备/ivshmem/ivshmem-code/tests/Interrupts/VM/: CMakeLists.txt  ivshmem.c
Virtualization/7. Device虚拟化/4. 仿真设备/ivshmem/ivshmem-code/uio/benchmarks/VM/coyote/: CMakeLists.txt  client.c
Virtualization/7. Device虚拟化/4. 仿真设备/ivshmem/ivshmem-code/uio/tests/Interrupts/VM/: CMakeLists.txt  dump_sema.c  uio_send.c
(+4244 files in other folders)
